Portfolio Kacper Pasik

--- a/Waluty/index.html
+++ b/Waluty/index.html
@@ -45,7 +45,7 @@
                     <li class="changeResult"></li>
                 </ul>
             </section>
-            <section class="currencyTable">
+            <section class="currencyTable hide">
                 <table>
                     <tr>
                         <th> Nazwa waluty </th>
@@ -56,8 +56,9 @@
             </section>
             <aside class="menuAsside">
                 <ul class="menu">
-                    <li>Tabela Walut</li>
-                    <li>O Aplikacji</li>
+                    <li class="calc">Kalkulator</li>
+                    <li class="table">Tabela Walut</li>
+                    <li class="info">O Aplikacji</li>
                 </ul>
             </aside>
 
